--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
                         <p>Graph resolution: </p>
                         <input type="number" onchange="updateFunction()" id="resolution" value="0.05">
                     </div>
+                    <div class="inline">
+                        <p>Projection: </p>
+                        <select name="projection" id="projection">
+                            <option value="perspective">Perspective</option>
+                            <option value="orthographic">Orthographic</option>
+                        </select>
+
+                    </div>
                     <p class="button" onclick="fullscreen(event)">Set fullscreen</p>
 
                 </div>
