Renamed 'orthographic' to 'parallel'

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p>Projection: </p>
                         <select name="projection" id="projection">
                             <option value="perspective">Perspective</option>
-                            <option value="orthographic">Orthographic</option>
+                            <option value="parallel">Parallel</option>
                         </select>
 
                     </div>
