--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2>Function</h2>
             <textarea id="function" rows="20" autocorrect="off" autocomplete="off" spellcheck="off"></textarea>
             <p class="button" onclick="updateFunction()">Set function</p>
-			<a href="docs/" target="_blank">Hur funkar det?</a>
+			<a href="docs/" target="_blank">How does it work?</a>
         </section>
         <section class="list">
             <h2>Variables</h2>
