Added touch support for new graph controls
It is now possible to move the graph using a touchscreen, as well as rotating and zooming.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                         <input type="number" id="trace-x" value="0" title="Hold shift and drag across the graph to manually move the tracing point.">
                     </div>
                     <div class="inline">
-                        <input type="button" onclick="view.snap()" value="Snap camera angle" title="ctrl+Q">
+                        <input type="button" onclick="view.snapAngle()" value="Snap camera angle" title="ctrl+Q">
+                        <input type="button" onclick="view.snapPosition()" value="Snap position" title="ctrl+I">
                     </div>
                     <div class="inline">
                         <p>x Offset:</p>
