--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="button" id="addVariableElement">+ Add variable</p>
         </section>
     </div>
-    
+    <script src="complex.js"></script>
     <script src="script.js"></script>
     <script src="expression-parser.js"></script>
 </body>
