--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         </section>
     </div>
     <script src="complex.js"></script>
+    <script src="linear-algebra.js"></script>
     <script src="script.js"></script>
     <script src="expression-parser.js"></script>
 </body>
